# IMSim

./: .dockerignore  .env.example  .gitignore  .gitleaks.toml  .pre-commit-config.yaml  AGENTS.md  DESIGN.md  Dockerfile  Example.xlsx  Procfile  README.md  app.py  docker-compose.yml  environment.yml  pyproject.toml  render.yaml  requirements.txt
.github/workflows/: ci.yml  container.yml
assets/: imsim.css  page_lifecycle.js
deploy/: .env.example  docker-compose.yml
deploy/source/: .env.example  docker-compose.yml
docs/: deployment.md  development.md  getting-started.md  open-design.md  reference.md
examples/: Example.xlsx  sample-items.csv
src/imsim/: __init__.py  __main__.py  app.py  browser_perf.py  callbacks.py  config.py  gunicorn_config.py  models.py  performance.py  repository.py  wsgi.py
src/imsim/callbacks/: __init__.py  common.py  inventory.py  maintenance.py  simulation.py  training.py
src/imsim/services/: asq.py  planning.py  simulation.py  training.py  uploads.py
src/imsim/ui/: academy_components.py  components.py  figures.py  grids.py  layout.py  layout_academy.py  layout_dashboard.py  layout_modals.py  panels.py  primitives.py
tests/: conftest.py  test_performance.py  test_planning.py  test_repository_and_app.py  test_training.py  test_ui_refresh_callbacks.py  test_uploads.py
tmp/repo-demo/: shared.json
