[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[project]
name = "imsim"
version = "0.2.0"
description = "Inventory management simulator and operations console built with Dash"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10,<3.13"
dependencies = [
    "dash==4.0.0",
    "dash-bootstrap-components>=2.0.4,<3",
    "dash-bootstrap-templates>=2.1.0,<3",
    "flask>=3.1.3,<4",
    "gunicorn>=25.1.0,<26",
    "numpy>=2.2.6,<3",
    "openpyxl>=3.1.5,<4",
    "pandas>=2.3.3,<3",
    "plotly>=6.6.0,<7",
]

[project.scripts]
imsim = "imsim.__main__:main"

[dependency-groups]
dev = [
    "pytest>=8.3.5,<9",
    "ruff>=0.12.0,<1",
]

[tool.hatch.build.targets.wheel]
packages = ["src/imsim"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["B", "E", "F", "I", "SIM", "UP"]
