[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[project]
name = "imsim"
version = "0.2.0"
description = "Inventory management simulator and operations console built with Dash"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.14,<3.15"
dependencies = [
    "dash>=4.1.0,<5",
    "dash-bootstrap-components>=2.0.4,<3",
    "dash-bootstrap-templates>=2.1.0,<3",
    "flask>=3.1.3,<4",
    "gunicorn>=26.0.0,<27",
    "numpy>=2.2.6,<3",
    "openpyxl>=3.1.5,<4",
    "pandas>=3.0.3,<4",
    "plotly>=6.6.0,<7",
    "psycopg[binary]>=3.2.9,<4",
    "sqlalchemy>=2.0.43,<3",
]

[project.scripts]
imsim = "imsim.__main__:main"

[dependency-groups]
dev = [
    "pytest>=9.0.3,<10",
    "ruff>=0.12.0,<1",
]

[tool.hatch.build.targets.wheel]
packages = ["src/imsim"]

[tool.hatch.build.targets.wheel.force-include]
"assets" = "assets"
"examples" = "examples"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
target-version = "py314"
line-length = 100

[tool.ruff.lint]
select = ["B", "E", "F", "I", "SIM", "UP"]
